# ipywidgets-app

./: fps_cli_args.toml
ipywidget-app/: .gitignore  MANIFEST.in  README.md  package.json  pyproject.toml  setup.cfg  setup.py  webpack.config.js
ipywidget-app/ipywidget_app/: __init__.py  _version.py  widget.py
ipywidget-app/ipywidget_app/templates/: index.html
ipywidget-app/ipywidget_app/tests/: conftest.py
ipywidget-app/src/: index.ts  main.ts  manager.ts
ipywidget-app/src/plugins/example/: index.ts
ipywidget-app/src/plugins/paths/: index.ts
ipywidget-app/src/plugins/top/: index.tsx  tokens.ts
ipywidget-app/src/widget/: component.tsx  model.ts  view.tsx
ipywidget-app/style/: base.css
ipywidget-app/ui-tests/: package.json
